Update activity_go_figure.xml operator view
Previous the operators in the TextView appeared left aligned, small &
grey in color.
Changed the size to 15sp, changed color to black, & aligned to center.

--- a/app/src/main/res/layout/activity_go_figure.xml
+++ b/app/src/main/res/layout/activity_go_figure.xml
@@ -47,7 +47,10 @@
                     android:layout_height="30dp"
                     android:layout_margin="10dp"
                     android:background="@drawable/operator_box"
-                    android:text="@string/blank" />
+                    android:gravity="center"
+                    android:text="@string/blank"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
 
                 <EditText
                     android:id="@+id/box2"
@@ -64,7 +67,10 @@
                     android:layout_height="30dp"
                     android:layout_margin="10dp"
                     android:background="@drawable/operator_box"
-                    android:text="@string/blank" />
+                    android:gravity="center"
+                    android:text="@string/blank"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
 
                 <EditText
                     android:id="@+id/box3"
@@ -81,7 +87,10 @@
                     android:layout_height="30dp"
                     android:layout_margin="10dp"
                     android:background="@drawable/operator_box"
-                    android:text="@string/blank" />
+                    android:gravity="center"
+                    android:text="@string/blank"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
 
                 <EditText
                     android:id="@+id/box4"
