--- a/app/src/main/res/layout/activity_sudoku.xml
+++ b/app/src/main/res/layout/activity_sudoku.xml
@@ -24,9 +24,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/solve"
+            android:layout_margin="5dp"
             android:background="@drawable/button_box"
-            android:layout_margin="5dp"/>
+            android:onClick="onSolveClick"
+            android:text="@string/solve" />
 
     </LinearLayout>
 
