--- a/app/src/main/res/layout/activity_sudoku.xml
+++ b/app/src/main/res/layout/activity_sudoku.xml
@@ -6,25 +6,38 @@
     tools:context=".Sudoku">
 
     <LinearLayout
+        android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/mainLayout"
+        android:layout_margin="10dp"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/sudokuBoxes"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_margin="0dp"
             android:orientation="vertical"
-            android:padding="10dp">
-
-        </LinearLayout>
+            android:padding="0dp" />
 
         <LinearLayout
+            android:id="@+id/inputPanel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="0dp"
+            android:orientation="vertical"
+            android:padding="0dp" />
+
+        <!-- Control Buttons -->
+        <LinearLayout
+            android:id="@+id/controlButtons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal">
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
             <Button
                 android:layout_width="wrap_content"
@@ -33,17 +46,27 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/button_box"
                 android:onClick="onSolveClick"
-                android:text="@string/solve" />
+                android:paddingStart="15dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="10dp"
+                android:text="@string/solve"
+                android:textSize="18sp" />
 
             <Button
+                android:id="@+id/clearButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
                 android:background="@drawable/button_box"
                 android:onClick="onClearClick"
-                android:text="@string/clear" />
-
+                android:paddingStart="15dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="10dp"
+                android:text="@string/clearSudoku"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
