--- a/app/src/main/res/drawable/selected_box.xml
+++ b/app/src/main/res/drawable/selected_box.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#FAD44F" />
+    <solid android:color="@color/colorSelectedBackground" />
     <stroke
         android:width="1dp"
         android:color="#000000" />
