--- a/app/src/main/res/drawable/input_box.xml
+++ b/app/src/main/res/drawable/input_box.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/colorAccent">
 
-    <corners android:radius="10dp" />
+    <item>
+        <shape>
+            <corners android:radius="10dp" />
+            <padding
+                android:bottom="0dp"
+                android:left="0dp"
+                android:right="0dp"
+                android:top="0dp" />
+            <solid android:color="@color/colorInputBackground" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/colorOnBackground" />
+        </shape>
+    </item>
 
-    <padding
-        android:bottom="0dp"
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp" />
-
-    <solid android:color="#ffffff" />
-
-    <stroke
-        android:width="1dp"
-        android:color="#575757" />
-
-</shape>
+</ripple>
