--- a/app/src/main/res/drawable/main_cards.xml
+++ b/app/src/main/res/drawable/main_cards.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/colorAccent">
 
-    <solid android:color="#ffffff" />
+    <item>
+        <shape>
+            <solid android:color="@color/colorCardBackground" />
+            <corners android:radius="10dp" />
+        </shape>
+    </item>
 
-    <corners android:radius="10dp" />
-
-</shape>
+</ripple>
